[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Font3.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Animation" id=3]
resource_name = "ResumeGameIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ResumeGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ResumeGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ResumeGameOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ResumeGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ResumeGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SaveGameIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HowToPlay/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HowToPlay/Label:custom_constants/shadow_offset_x")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "SaveGameOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HowToPlay/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HowToPlay/Label:custom_constants/shadow_offset_x")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RestartIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Restart/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Restart/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RestartOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Restart/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Restart/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="PauseMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -300.0
margin_right = 350.0
margin_bottom = 300.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 170.0
margin_bottom = 70.0
rect_scale = Vector2( 5, 5 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_right = 600.0
margin_bottom = 400.0
mouse_filter = 2
custom_constants/separation = 0

[node name="ResumeGame" type="Button" parent="Menu/Buttons"]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/ResumeGame"]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "RESUME_GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/ResumeGame"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0
range_layer_max = 512

[node name="Restart" type="Button" parent="Menu/Buttons"]
margin_top = 80.0
margin_right = 600.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Restart"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "RESTART_MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Restart"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0
range_layer_max = 512

[node name="HowToPlay" type="Button" parent="Menu/Buttons"]
margin_top = 160.0
margin_right = 600.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/HowToPlay"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "HOW_TO_PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/HowToPlay"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0
range_layer_max = 512

[node name="Options" type="Button" parent="Menu/Buttons"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Options"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Options"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0
range_layer_max = 512

[node name="Exit" type="Button" parent="Menu/Buttons"]
margin_top = 320.0
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Exit"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "EXIT_GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Exit"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0
range_layer_max = 512

[node name="ResumeGameA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/ResumeGameIn = SubResource( 3 )
anims/ResumeGameOut = SubResource( 4 )

[node name="SaveGameA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/SaveGameIn = SubResource( 5 )
anims/SaveGameOut = SubResource( 6 )

[node name="RestartA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/RestartIn = SubResource( 7 )
anims/RestartOut = SubResource( 8 )

[node name="OptionsA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/OptionsIn = SubResource( 9 )
anims/OptionsOut = SubResource( 10 )

[node name="ExitA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/ExitIn = SubResource( 11 )
anims/ExitOut = SubResource( 12 )

[node name="Fade" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
[connection signal="mouse_entered" from="Menu/Buttons/ResumeGame" to="." method="_on_ResumeGame_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/ResumeGame" to="." method="_on_ResumeGame_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Restart" to="." method="_on_Restart_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/HowToPlay" to="." method="_on_SaveGame_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/HowToPlay" to="." method="_on_SaveGame_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/HowToPlay" to="." method="_on_SaveGame_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Exit" to="." method="_on_Exit_pressed"]
